--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "salman saleem",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.1.2",
     "express": "^4.18.2",
+    "mongoose": "^7.2.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
