--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "salman saleem",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "colors": "^1.4.0",
     "dotenv": "^16.1.2",
     "express": "^4.18.2",
