--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.1.2",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
