--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "salman saleem",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "colors": "^1.4.0",
     "dotenv": "^16.1.2",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
