--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "body-parser": "^1.20.1",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.2",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.9.0",
     "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
